--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -3,7 +3,7 @@
   "description": "Clj-kondo language server and client bundled in one extension.",
   "author": "Michiel Borkent",
   "license": "EPL-1",
-  "version": "0.0.1-alpha.1",
+  "version": "0.0.1",
   "publisher": "borkdude",
   "repository": {
     "type": "git",
