--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -3,7 +3,7 @@
   "description": "Clj-kondo language server and client bundled in one extension.",
   "author": "Michiel Borkent",
   "license": "EPL-1",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "publisher": "borkdude",
   "repository": {
     "type": "git",
@@ -16,6 +16,7 @@
   "activationEvents": [
     "onLanguage:clojure"
   ],
+  "icon": "icon.png",
   "scripts": {
     "vscode:prepublish": "npm run update-vscode && npm run compile",
     "compile": "tsc -b",
