--- a/server/project.clj.template
+++ b/server/project.clj.template
@@ -1,4 +1,4 @@
-(defproject clj-kondo/lsp-server "{{version}}"
+(defproject clj-kondo/lsp-server "{{version}}-2"
   :description "Language server for clj-kondo."
   :url "https://github.com/borkdude/clj-kondo.lsp"
   :scm {:name "git"
@@ -8,7 +8,7 @@
   :dependencies [[org.clojure/clojure "1.10.1"]
                  [clj-kondo "{{version}}"]
                  [org.eclipse.lsp4j/org.eclipse.lsp4j "0.8.1"]]
-  :main clj-kondo.lsp.main
+  :main clj-kondo.lsp-server.main
   :aot :all
   :profiles {:uberjar {:aot :all
                        :global-vars {*assert* false}
