--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -3,7 +3,7 @@
   "description": "Clj-kondo, a linter for Clojure that sparks joy.",
   "author": "Michiel Borkent",
   "license": "EPL-1",
-  "version": "2021.3.31",
+  "version": "2021.3.310",
   "publisher": "borkdude",
   "repository": {
     "type": "git",
@@ -18,11 +18,10 @@
   ],
   "icon": "icon.png",
   "scripts": {
-    "vscode:prepublish": "npm run update-vscode && npm run compile",
+    "vscode:prepublish": "npm run compile",
     "compile": "tsc -b",
     "watch": "tsc -b -w",
-    "update-vscode": "vscode-install",
-    "postinstall": "vscode-install"
+    "postinstall": ""
   },
   "dependencies": {
     "vscode-languageclient": "^5.2.1"
